# rules_mdbook

./: .bazelrc  .gitignore  MODULE.bazel  README.md
.github/: release-notes.md.in
.github/workflows/: main.yaml  pages.yaml
bazel/: mdbook-windows.BUILD.bazel  mdbook.BUILD.bazel
doc/: BUILD.bazel  SUMMARY.md  example.md  intro.md  platforms.md  reference.md  usage.md
mdbook/: BUILD.bazel  book.toml.tpl  defs.bzl  dummy.sh  toolchain.bzl
mdbook/toolchains/: BUILD.bazel
