module(name = "rules_mdbook")

bazel_dep(name = "platforms", version = "0.0.10")

register_toolchains("//mdbook/toolchains:all")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "mdbook_x86_64_apple_darwin",
    integrity = "sha256-A8uCL3CAof1qaHQJKB/iytdFdIEgzcj1poxzbIMdAds=",
    urls = [
        "https://github.com/rust-lang/mdBook/releases/download/v0.4.43/mdbook-v0.4.43-x86_64-apple-darwin.tar.gz",
    ],
    build_file = "//bazel:mdbook.BUILD.bazel",
)

http_archive(
    name = "mdbook_aarch64_linux",
    integrity = "sha256-ZH1xlR/Glq3IxJmkNjuxohBFoMc0gY8Het2OxEd62BQ=",
    urls = [
        "https://github.com/rust-lang/mdBook/releases/download/v0.4.43/mdbook-v0.4.43-aarch64-unknown-linux-musl.tar.gz",
    ],
    build_file = "//bazel:mdbook.BUILD.bazel",
)

http_archive(
    name = "mdbook_x86_64_linux",
    integrity = "sha256-0gwvIOscEX3F6+7BIOLS9kVckP6LTyG3RmYl2LZ7nmA=",
    urls = [
        "https://github.com/rust-lang/mdBook/releases/download/v0.4.43/mdbook-v0.4.43-x86_64-unknown-linux-gnu.tar.gz",
    ],
    build_file = "//bazel:mdbook.BUILD.bazel",
)

http_archive(
    name = "mdbook_x86_64_windows",
    integrity = "sha256-qLvBkg5D3IjS0Q0OOica+GO7b3ZUXGzezDXdGzCFKoY=",
    urls = [
        "https://github.com/rust-lang/mdBook/releases/download/v0.4.43/mdbook-v0.4.43-x86_64-pc-windows-msvc.zip",
    ],
    build_file = "//bazel:mdbook-windows.BUILD.bazel",
)
